--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -12,15 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UniSellApplication"
         tools:targetApi="31" >
-        <activity android:name=".RegistrationActivity"
+        <activity android:name=".activities.RegistrationActivity"
             android:exported="true">
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.HomeActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.UniSellApplication.NoActionBar" >
+        </activity>
+
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.UniSellApplication.NoActionBar" >
@@ -30,6 +37,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
 
         <meta-data
             android:name="preloaded_fonts"
