--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -19,18 +19,18 @@
 
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="true"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".activities.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.UniSellApplication.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
