--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,35 +11,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UniSellApplication"
-        tools:targetApi="31" >
-
-        <activity android:name=".activities.RegistrationActivity"
-            android:exported="true">
-        </activity>
-
+        tools:targetApi="31">
+        <activity
+            android:name=".activities.DormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.TextbooksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.RegistrationActivity"
+            android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".activities.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.UniSellApplication.NoActionBar" >
+            android:theme="@style/Theme.UniSellApplication.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.UniSellApplication.NoActionBar" >
-        </activity>
-
+            android:theme="@style/Theme.UniSellApplication.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
