--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.UniSellApplication"
         tools:targetApi="31">
         <activity
+            android:name=".activities.TechnologyActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.DormActivity"
             android:exported="false" />
         <activity
