--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.UniSellApplication"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ViewListingsActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity
             android:name=".activities.TechnologyActivity"
             android:exported="false" />
         <activity
