View a listing logic finished

--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.DormActivity"
-            android:exported="false"
-            android:parentActivityName=".ui.category.CategoryFragment" />
+            android:exported="false"/>
         <activity
             android:name=".activities.LabActivity"
             android:exported="false" />
