--- a/UniSellApplication/app/src/main/AndroidManifest.xml
+++ b/UniSellApplication/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.ViewListingsActivity"
-            android:exported="false"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:exported="false" />
         <activity
             android:name=".activities.TechnologyActivity"
             android:exported="false" />
